Добавил таб для информации

--- a/app/info.html
+++ b/app/info.html
@@ -1184,165 +1184,181 @@
 
                     </div>
 
-                    <div class="info__col info__col--special">
-                      <div class="info__col__inner">
-                        <div class="info__col__title">
-                          Беттинг
+                    <div class="info__col__box">
+                      <div class="info__col__box__tab" id="infoColBoxTab">
+                        <span class="info__col__box__tab__btn">
+                          Подробнее
+                        </span>
+
+                        <span class="info__col__box__tab__arrow">
+
+                        </span>
+                      </div>
+                      <div class="info__col__box__wrapper">
+                        <div class="info__col info__col--special">
+                          <div class="info__col__inner">
+                            <div class="info__col__title">
+                              Беттинг
+                            </div>
+
+                            <div class="info__col__wrapper info__col__wrapper--special">
+
+                              <div class="info__col__item info__col__item--special">
+                                <span class="info__col__description">
+                                  Ставки
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Мин:
+                                </span>
+
+                                <span class="info__col__value">
+                                  20 руб
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Макс:
+                                </span>
+
+                                <span class="info__col__value">
+                                  определяется БК
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Выкуп:
+                                </span>
+
+                                <span class="info__col__value">
+                                  Да
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Live:
+                                </span>
+
+                                <span class="info__col__value">
+                                  Да
+                                </span>
+                              </div>
+
+                            </div>
+
+                            <div class="info__col__wrapper">
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Live трансляции:
+                                </span>
+
+                                <span class="info__col__value">
+                                  Да
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Киберспорт:
+                                </span>
+
+                                <span class="info__col__value">
+                                  Да
+                                </span>
+                              </div>
+
+                            </div>
+                          </div>
+
+
+
                         </div>
 
-                        <div class="info__col__wrapper info__col__wrapper--special">
+                        <div class="info__col info__col--small">
+                          <div class="info__col__inner">
+                            <div class="info__col__title">
+                              Маржа по видам спорта:
+                            </div>
 
-                          <div class="info__col__item info__col__item--special">
-                            <span class="info__col__description">
-                              Ставки
-                            </span>
+                            <div class="info__col__wrapper">
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Футбол
+                                </span>
+
+                                <span class="info__col__value">
+                                  3%
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Хоккей
+                                </span>
+
+                                <span class="info__col__value">
+                                  3,3%
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Баскетбол
+                                </span>
+
+                                <span class="info__col__value">
+                                  3,5%
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Валейбол
+                                </span>
+
+                                <span class="info__col__value">
+                                  3,5%
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  Гольф
+                                </span>
+
+                                <span class="info__col__value">
+                                  3,5%
+                                </span>
+                              </div>
+
+                              <div class="info__col__item">
+                                <span class="info__col__description">
+                                  UFC
+                                </span>
+
+                                <span class="info__col__value">
+                                  3,5%
+                                </span>
+                              </div>
+
+                            </div>
                           </div>
 
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Мин:
-                            </span>
 
-                            <span class="info__col__value">
-                              20 руб
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Макс:
-                            </span>
-
-                            <span class="info__col__value">
-                              определяется БК
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Выкуп:
-                            </span>
-
-                            <span class="info__col__value">
-                              Да
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Live:
-                            </span>
-
-                            <span class="info__col__value">
-                              Да
-                            </span>
-                          </div>
-
-                        </div>
-
-                        <div class="info__col__wrapper">
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Live трансляции:
-                            </span>
-
-                            <span class="info__col__value">
-                              Да
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Киберспорт:
-                            </span>
-
-                            <span class="info__col__value">
-                              Да
-                            </span>
-                          </div>
 
                         </div>
                       </div>
 
-
-
                     </div>
 
-                    <div class="info__col info__col--small">
-                      <div class="info__col__inner">
-                        <div class="info__col__title">
-                          Маржа по видам спорта:
-                        </div>
 
-                        <div class="info__col__wrapper">
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Футбол
-                            </span>
-
-                            <span class="info__col__value">
-                              3%
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Хоккей
-                            </span>
-
-                            <span class="info__col__value">
-                              3,3%
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Баскетбол
-                            </span>
-
-                            <span class="info__col__value">
-                              3,5%
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Валейбол
-                            </span>
-
-                            <span class="info__col__value">
-                              3,5%
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              Гольф
-                            </span>
-
-                            <span class="info__col__value">
-                              3,5%
-                            </span>
-                          </div>
-
-                          <div class="info__col__item">
-                            <span class="info__col__description">
-                              UFC
-                            </span>
-
-                            <span class="info__col__value">
-                              3,5%
-                            </span>
-                          </div>
-
-                        </div>
-                      </div>
-
-
-
-                    </div>
                   </div>
                   <div class="info__mid">
                     <div class="office__payments info__payments">
